--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-midnight
+title: Joe's Webpage
+description: This website mainly contains links to coding projects and other repositories maintained by Joe Koebbe
+markdown: kramdown
