--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-midnight
 title: Gary's Webpage
-description: This website mainly contains links to coding projects and other repositories maintained by Joe Koebbe
+description: This website contains links to coding projects and math4610 home work done by Gary Mitchell
 markdown: kramdown
